Correct spacing around navigational bar

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -5,10 +5,6 @@
   width: 600px;
 }
 
-.card:last-of-type {
-  margin-top: 100px;
-}
-
 .card__title {
   font-family: "Inter", Arial, sans-serif;
   font-weight: bold;
