--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -8,7 +8,6 @@
   display: flex;
   column-gap: 20px;
   list-style-type: none;
-  padding: 0;
   align-items: center;
   margin-top: 0;
   margin-right: 80px;
